# mpbp

./: .clang-format  .gitignore  .markdownlint.yaml  CHANGE_NOTES.md  CMakeLists.txt  LICENSE  Packer_8hpp_source.html  README.md  Rect_8hpp_source.html  Space_8hpp_source.html  annotated.html  classes.html  classmpbp_1_1Packer-members.html  classmpbp_1_1Packer.html  classmpbp_1_1Rect-members.html  classmpbp_1_1Rect.html  classmpbp_1_1Space-members.html  classmpbp_1_1Space.html  configuration_8h_source.html  dir_41135c37c92192789f479ba86d2ce7d1.html  dir_5d97eab6c6b3c42d54941a9c81c5c4f0.html  dir_af353f345b878e6d870695618bd3e730.html  dir_c6fd84a86689200d1036420e3918f34a.html  files.html  functions.html  functions_func.html  index.html  menudata.js  mpbp_8hpp_source.html
.github/workflows/: Test.yaml
.reuse/: dep5
.trunk/: .gitignore  trunk.yaml
LICENSES/: MIT.txt
docs/: CMakeLists.txt  Doxyfile.in  main.dox
example/: CMakeLists.txt
example/src/: main.cpp
include/mpbp/: Packer.hpp  Rect.hpp  Space.hpp  input_rect.hpp  mpbp.hpp  pack_rect.hpp
search/: all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
src/: Packer.cpp  Rect.cpp  Space.cpp  configuration.h.in  version.h.in
test/: CMakeLists.txt
test/src/: packer_test.cpp  rect_test.cpp  space_test.cpp
